# c-obfuscator

./: LICENSE  README.md  pyproject.toml
obfuscator/: __init__.py  clang-format.style  file_io.py  files_io.py  main.py  parser.py  processor.py  symbol.py  symbol_encoder.py
tests/: test_processor.py
tests/fixtures/: test_class.cpp
