[tool.poetry]
name = "c-obfuscator"
version = "0.1.0"
description = ""
authors = ["Jakub Krajniak <jkrajniak@gmail.com>"]
readme = "README.md"
packages = [{include = "c_obfuscator"}]

[tool.poetry.dependencies]
python = "^3.9"
pycparser = "^2.21"
libclang = "^16.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

