[tool.poetry]
name = "c-obfuscator"
version = "0.0.1"
description = ""
authors = ["Jakub Krajniak <jkrajniak@gmail.com>"]
readme = "README.md"
packages = [{include = "c_obfuscator"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

