[tool.poetry]
name = "c-obfuscator"
version = "0.0.5"
description = ""
authors = ["Jakub Krajniak <jkrajniak@gmail.com>"]
readme = "README.md"
packages = [{include = "obfuscator"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
pycparser = "^2.21"

[tool.poetry.scripts]
"obfuscator" = "obfuscator.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

